erDiagram
    users {
        int user_id PK "用户ID"
        string username "账号"
        string password_hash "密码哈希"
        string role "角色 (student, teacher)"
    }

    students {
        int student_id PK "学生档案ID"
        int user_id FK "关联用户ID"
        string name "姓名"
        string student_number "学号"
    }

    teachers {
        int teacher_id PK "教师档案ID"
        int user_id FK "关联用户ID"
        string name "姓名"
        string title "职称"
    }

    courses {
        int course_id PK "课程ID"
        string course_name "课程名称"
        int teacher_id FK "授课教师ID"
    }

    enrollments {
        int student_id FK "学生ID"
        int course_id FK "课程ID"
        float grade "成绩"
    }

    users ||--o| students : "拥有档案"
    users ||--o| teachers : "拥有档案"
    teachers ||--|{ courses : "讲授"
    students ||--|{ enrollments : "参与"
    courses ||--|{ enrollments : "包含"

